server/compilers/goLiteJS/src/test/ml2/invalid/func3.go
// return value does not type check
package main

func f() {
    return 1
}

func main() {
    f()
}
